<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_driver</name>
  <version>1.0.0</version>
  <description>The simple ROS2 node which control a turtle moving to the particular point</description>
  <maintainer email="aleksey@fedoseev.net">Alexey Fedoseev</maintainer>
  <license>GPL v3</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
